sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value v
    v=i
    ^AlgInsertionSort:5: error: not found: value v
    if (isSmallerThan(i-1,v)) {
                          ^